# docxwright

./: README.md  pyproject.toml
THIRD_PARTY_LICENSES/: python-docx.MIT.txt
docxwright/: __init__.py  cli.py  converter.py
