[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docxwright"
version = "0.1.0"
description = "A pragmatic LaTeX-to-DOCX converter for editable scientific manuscripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
]
authors = [
    { name = "Kenan Hanke" },
]

[project.scripts]
docxwright = "docxwright.cli:main"

[tool.setuptools.packages.find]
include = ["docxwright*"]
