[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docxwright"
version = "1.0.1"
description = "A pragmatic LaTeX-to-DOCX converter for editable scientific manuscripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-docx>=1.1.0"]
authors = [{ name = "Kenan Hanke" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES/*"]

[project.scripts]
docxwright = "docxwright.cli:main"

[tool.setuptools.packages.find]
include = ["docxwright*"]

[project.urls]
Homepage = "https://github.com/KenanHanke/docxwright"
Issues = "https://github.com/KenanHanke/docxwright/issues"
